--- a/src/main/resources/resources/lang/en_US.lang
+++ b/src/main/resources/resources/lang/en_US.lang
@@ -1,5 +1,5 @@
-;# {name} - English (US) Language File
-;# Copyright © {copyright.years} Visual Illusions Entertainment
+;# ${project.name} - English (US) Language File
+;# Copyright © ${copyright.years} Visual Illusions Entertainment
 ;# Licensed under the GNU General Public License V3
 ;# This file NEEDS to be in UTF-8 format!
 ;# This file is also the default Language file and needs to be included
