--- a/src/main/resources/resources/lang/languages.txt
+++ b/src/main/resources/resources/lang/languages.txt
@@ -1,5 +1,5 @@
-;# {name} - Language Configuration File
-;# Copyright © {copyright.years} Visual Illusions Entertainment
+;# ${project.name} - Language Configuration File
+;# Copyright © ${copyright.years} Visual Illusions Entertainment
 ;# Licensed under the GNU General Public License V3
 ;# This file NEEDS to be in UTF-8 format!
 ;# This file tells VIUtils which languages are supported
